Ingress/apacheService.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
spec:
  type: LoadBalancer
  selector:
    app: httpd
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001
