Ingress/ingressFile.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd-ingress
spec:
  rules:
    - host: "rohit.com"
      http:
       paths:
        - pathType: Prefix
          path: /
          backend:
            service: 
              name: httpd-service
              port:
                number: 8088
